<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
     >

    <TextView
        android:id="@+id/vehicle_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle"
        android:text="@string/vehicle_menu_view1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_mass" />

        <EditText
            android:id="@+id/vehicle_input_mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_sprung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_sprung" />

        <EditText
            android:id="@+id/vehicle_input_sprung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_track" />

        <EditText
            android:id="@+id/vehicle_input_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_view3" />

        <EditText
            android:id="@+id/vehicle_input_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_roll" />

        <EditText
            android:id="@+id/vehicle_input_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_height" />

        <EditText
            android:id="@+id/vehicle_input_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <TextView
        android:id="@+id/vehicle_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle"
        android:text="@string/vehicle_text_view2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle" >

        <TextView
            android:id="@+id/vehicle_text_suspension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_suspension" />

        <EditText
            android:id="@+id/vehicle_input_suspension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/menu_text_middle">

        <TextView
            android:id="@+id/vehicle_text_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_text_view4" />

        <EditText
            android:id="@+id/vehicle_input_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

</LinearLayout>